--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
             node-version: 12
       - name: instaling surge
         run: npm install -g surge
+      - name: installing yarn
+        run: nmp install -g yarn
       - name: build development server
         run: yarn build
       - name: deploying surge
